--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,13 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
+  height: 100%;
   background: linear-gradient(
       to bottom,
       transparent,
